# silksong-save-codec

./: .gitignore  README.md  pyproject.toml
saves/: payload.b64  user2.json
scripts/: cli.py  codec.py  decrypt.py  encrypt.py  inspect.py  split.py
src/silksong/: cli.py  codec.py  gui.py
